--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
-.project
-.classpath
+# Built application directory
+release/
 
-bin/
-gen/
-out/
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file
+local.properties
+
+# IntelliJ
+*.iml
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/libraries
+.idea/caches
