--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 13
+    compileSdkVersion 24
     buildToolsVersion "28.0.1"
 
     defaultConfig {
         applicationId "jp.gr.java_conf.yuka.stickeraser.activity"
-        minSdkVersion 10
-        targetSdkVersion 10
+        minSdkVersion 14
+        targetSdkVersion 24
+        versionCode 5
+        versionName "1.4"
     }
 
     buildTypes {
