--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		package="jp.gr.java_conf.yuka.stickeraser.activity"
-		android:versionCode="4"
-		android:versionName="1.3" >
-
-		<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10"/>
+		package="jp.gr.java_conf.yuka.stickeraser.activity">
 
 		<uses-permission android:name="android.permission.INTERNET" />
 		<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 		<application
+				android:allowBackup="false"
 				android:icon="@drawable/ic_launcher"
 				android:label="@string/app_name" >
 
