--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,7 @@ android {
 }
 
 dependencies {
-    implementation files('libs/GoogleAdMobAdsSdk-6.0.1.jar')
+    implementation 'com.google.firebase:firebase-ads:15.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
